<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="@dimen/activity_margin">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:orientation="vertical">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/prodNameColour" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price_label"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/prodDetailsColour" />

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/prodDetailsColour" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quantity_label"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/prodDetailsColour" />

            <TextView
                android:id="@+id/quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/prodDetailsColour" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical">

        <Button
            android:id="@+id/sell_button"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/quantity_button"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="@dimen/sell_top_padding"
            android:background="@drawable/button_style"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:gravity="center"
            android:text="@string/sell_button"
            android:textSize="@dimen/sell_text_size" />

    </LinearLayout>

</LinearLayout>